@@ -584,7 +584,7 @@ FUNTAB R_FunTab[] = {
     {"print.default", do_printdefault, 0, 111, 7, {PP_FUNCALL, PREC_FN, 0}},
     {"prmatrix", do_prmatrix, 0, 111, 6, {PP_FUNCALL, PREC_FN, 0}},
     {"invisible", do_invisible, 0, 101, 1, {PP_FUNCALL, PREC_FN, 0}},
-    {"gc", do_gc, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
+    {"gc", do_gc, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"gcinfo", do_gcinfo, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"gctorture", do_gctorture, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"memory.profile", do_memoryprofile, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
